[gd_scene load_steps=2 format=3 uid="uid://dj2temqlineny"]

[ext_resource type="Script" uid="uid://cgibdydwxh47u" path="res://scripts/game/character_modules/ground_slam.gd" id="1_tpkuw"]

[node name="GroundSlamComponent" type="Node2D"]
script = ExtResource("1_tpkuw")
metadata/_custom_type_script = "uid://cgibdydwxh47u"

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="SlamJumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
